# medsum

./: .gitignore  README.md  pyproject.toml  pytest.ini  summarizer.py
summarizer/: __init__.py  ffmpeg.py  llm.py  snapshots.py  summarizer.py  template.html  templates.py  topics.py  vtt.py
tests/: test_llm.py  test_templates.py  test_topics.py  test_vtt.py
tests/fixtures/: sample.vtt  transcript.json
