[tool.poetry]
name = "transcript-summarizer"
version = "0.1.0"
description = ""
authors = ["Dane Summers <dsummersl@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
click = "^8.1.7"
pydub = "^0.25.1"
openai = "^1.3.0"
markdown2 = "^2.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
