[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = "tldl(too long didn't listen): generate HTML summaries of audio and video transcripts."
authors = ["Dane Summers <dsummersl@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
click = "^8.1.7"
pydub = "^0.25.1"
openai = "^1.3.0"
markdown2 = "^2.4.10"

[tool.poetry.scripts]
tldl = "summarizer.summarizer:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
