[tool.pyright]
extraPaths = ["summarizer"]

[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = "tldl(too long didn't listen): generate HTML summaries of audio and video transcripts."
authors = ["Dane Summers <dsummersl@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
click = "^8.1.7"
pydub = "^0.25.1"
openai = "^1.3.0"
markdown2 = "^2.4.10"
langchain = "^0.1.4"
langgraph = "^0.0.19"
langchain-openai = "^0.0.5"
webvtt-py = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"

[tool.pytest.ini_options]
python_paths = ["summarizer"]
addopts = "--cov=summarizer"

[tool.poetry.scripts]
tldl = "summarizer.summarizer:summarize"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
